@@ -43,6 +43,7 @@
 #ifdef HAVE_UNISTD_H
 #include <unistd.h>
 #endif
+#include "getopt.h"
 
 #include "global.h"
 
